# string-calculator-kata

./: README.md  pyproject.toml
tests/: test_string_calculator.py
