[tool.poetry]
name = "string-calculator"
version = "0.1.0"
description = ""
authors = ["Marco Dallagiacoma <marco.dallagiacoma@gmail.com>"]
readme = "README.md"
packages = [{include = "string_calculator"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
